# Caelum-Engine

./: .gitignore  CMakeLists.txt  CMakeLists.txt.win32  COPYING  README.md  video.sh
QtProject/: Caelum.creator.user.2.6pre1  Caelum.files  Caelum.includes  NAGE.files
config/: caelum.cfg  plugins.cfg  resources.cfg  video.cfg
include/: README.txt
plugins/: Plugin_BSPSceneManager.so.1.8.0  Plugin_OctreeSceneManager.so.1.8.0  Plugin_OctreeZone.so.1.8.0  Plugin_PCZSceneManager.so.1.8.0  Plugin_ParticleFX.so.1.8.0  RenderSystem_GL.so.1.8.0
src/: CMakeLists.txt  EnginePrerequisites.h  NagePrerequisites.h  libPrerequisites.hpp  main.cpp  maintest.cpp  teststate.cpp  teststate.h
src/ai/: fsm.cpp  fsm.h  fstate.cpp  fstate.h
src/audio/: audiobuffer.cpp  audiobuffer.h  audiodecoder.cpp  audiodecoder.h  audiolayer.cpp  audiolayer.h  audiomanager.cpp  audiomanager.h  audioreceptor.cpp  audioreceptor.h  audiosource.cpp  audiosource.h
src/core/: configfile.cpp  configfile.h  gameengine.cpp  gameengine.h  gamestate.cpp  gamestate.h  log.h  logmanager.cpp  logmanager.h  pluginloader.h  pluginmanager.cpp  pluginmanager.h  preferencemanager.cpp  preferencemanager.h  resourcemanager.cpp  resourcemanager.h
src/core/ogre/: ogrelog.cpp  ogrelog.h  ogrelogmanager.cpp  ogrelogmanager.h
src/demos/: demo.cpp  demo.h  demoadvanced.cpp  demoadvanced.h  demodesign.cpp  demodesign.h  demointro.cpp  demointro.h  demomain.cpp  demomain.h  demomesh.cpp  demomesh.h  demonetclient.cpp  demonetclient.h  demonetserver.cpp  demonetserver.h  demophysics.cpp  demophysics.h
src/examples/: example.c
src/game/: component.h  eventlistener.h  fixedcomponent.cpp  fixedcomponent.h  gamelayer.cpp  gamelayer.h  gamemanager.cpp  gamemanager.h  gameobject.cpp  gameobject.h  gamestate.cpp  gamestate.h  layermanager.cpp  layermanager.h  movablecomponent.cpp  movablecomponent.h  scene.cpp  scene.h  scenemanager.cpp  scenemanager.h
src/input/: inputcommon.h  inputmanager.cpp  inputmanager.h  inputmanager.hpp  joylistener.h  keylistener.cpp  keylistener.h  keylistener.hpp  motioncontroller.cpp  motioncontroller.h  motioncontrollerfactory.cpp  motioncontrollerfactory.h  mouselistener.cpp  mouselistener.h  mouselistener.hpp  oisinputmanager.cpp  oisinputmanager.h  psmovecontroller.cpp  psmovecontrollerfactory.h
src/input/psmove/: psmovecontroller.cpp  psmovecontroller.h  psmovecontrollerfactory.cpp  psmovefactory.cpp  psmovefactory.h
src/math/: math.cpp  math.h  matrix3.cpp  matrix3.h  quaternion.cpp  quaternion.h  unitconversor.h  vector3.cpp  vector3.h
src/net/: nethost.cpp  nethost.h  netobject.cpp  netobject.h
src/patterns/: AbstractFactory.h  AssociativeCollection.h  ListenerRegistrant.h  SimpleCollection.h  Singleton.h  Singleton.hpp
src/physics/: physicslayer.cpp  physicslayer.h  physicsmanager.cpp  physicsmanager.h  rigidbody.cpp  rigidbody.h
src/physics/btogre/: BtOgre.cpp  BtOgreExtras.h  BtOgreGP.h  BtOgrePG.h  bulletrigidbody.cpp  bulletrigidbody.h
src/render/: cameracomponent.cpp  cameracomponent.h  colourvalue.cpp  colourvalue.h  entity.cpp  entity.h  guimanager.cpp  guimanager.h  light.cpp  light.h  oceansimulator.cpp  oceansimulator.h  realisticsky.cpp  realisticsky.h  rendercomponent.cpp  rendercomponent.h  renderlayer.cpp  renderlayer.h  renderlistener.h  rendermanager.cpp  rendermanager.h  renderwindow.cpp  renderwindow.h  skeleton.cpp  skeleton.h  terrain.cpp  terrain.h  windowlistener.h
src/render/ogre/: oceanlistener.cpp  oceanlistener.h  ogrerendermanager.cpp  ogrerendermanager.h  ogrerenderwindow.cpp  ogrerenderwindow.h
src/util/: platformutils.cpp  platformutils.h  stringutils.h  stringvector.h
tools/: checkStyle.sh  style_issues.txt  video.sh
